Fixed Anchor Jumps; Added Agent Sections

--- a/Styles.css
+++ b/Styles.css
@@ -17,6 +17,10 @@ footer {
     margin-top: 25px;
 }
 
+/* Offset Anchor Link Jumps */
+html {
+    scroll-padding-top: 250px;
+}
 
 body {
     text-align: center;
@@ -253,10 +257,10 @@ tr.Arsenal td {
     padding: 10px;
     border: 1px solid gray;
     border-spacing: 0px;
-    width: 20%;
-    height: 20%; 
-    transition: background-color 2s;
+    transition: all 2s;
     vertical-align: top;
+    min-width: 20%;
+    min-height: 20%;
 }
 
 tr.Arsenal h5 {
@@ -266,6 +270,10 @@ tr.Arsenal h5 {
 tr.Arsenal td:hover {
     background-color: red;
     color: white;
+}
+
+tr.Arsenal img {
+    filter: drop-shadow(10px 10px 15px #363232);
 }
 
 p.arsenalContent {
@@ -306,3 +314,4 @@ div.Agents:hover a {
 div.Agents:hover {
     box-shadow: 0px 0px 10px 3px gray;
 }
+
